Installed Bootsrap File

--- a/bakery/src/app/app.component.html
+++ b/bakery/src/app/app.component.html
@@ -1,2 +1,8 @@
-
+<div class="container">
+    <div class="row mt-5">
+        <div class="col-12">
+            hi
+        </div>
+    </div>
+</div>
 <router-outlet><p>This is my First Web Page</p></router-outlet>
