--- a/bakery/src/app/Components/nav-bar/nav-bar.component.html
+++ b/bakery/src/app/Components/nav-bar/nav-bar.component.html
@@ -18,6 +18,9 @@
           <li class="nav-item">
             <a class="nav-link active text-primary" href="#">Contact us</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active text-primary" routerLink="/auth/register">Register</a>
+          </li>
         </ul>
       </div>
     </div>
