--- a/bakery/src/app/Components/nav-bar/nav-bar.component.html
+++ b/bakery/src/app/Components/nav-bar/nav-bar.component.html
@@ -1,27 +1,43 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #369ee9;">
+<nav class="navbar navbar-expand-lg navbar-light bg-danger" style="background-color: #369ee9;">
     <div class="container">
-      <a class="navbar-brand fw-bolder" aria-current="page" href="#">Priya's Bakery</a>
+      <a class="navbar-brand fw-bolder text-white fs-3" aria-current="page" href="#">Priya's Bakery</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item ">
-            <a class="nav-link active text-primary " href="#">Home</a>
+            <a class="nav-link active text-white fw-bold" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active text-primary" href="#">Products</a>
+            <a class="nav-link active text-white fw-bold" href="#">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active text-primary" href="#">About us</a>
+            <a class="nav-link active text-white fw-bold" href="#">About us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active text-primary" href="#">Contact us</a>
+            <a class="nav-link active text-white fw-bold" href="#">Contact us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active text-primary" routerLink="/auth/register">Register</a>
+            <a class="nav-link active text-white fw-bold" routerLink="/auth/register">Register</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active text-white fw-bold" routerLink="/auth/login"> Login</a>
+          </li>
+            <li class="nav-item ">
+              <!-- <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form> -->
           </li>
         </ul>
+      
       </div>
+      <!-- <li class="nav-item "> -->
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-primary" type="submit">Search</button>
+        </form>
+    <!-- </li> -->
     </div>
   </nav>
