--- a/bakery/src/app/Components/register/register.component.html
+++ b/bakery/src/app/Components/register/register.component.html
@@ -1,7 +1,32 @@
-<div class="container">
+<div class="container my-5 center-div">
     <div class="row">
-        <div class="col-6">
-            
-        </div>
+        <form>
+            <div class="mb-3">
+                <label for="first_name" class="form-label">First Name:</label>
+                <input type="name" class="form-control" id="first_name">
+            </div>
+
+            <div class="mb-3">
+                <label for="last_name" class="form-label">Last Name</label>
+                <input type="name" class="form-control" id="last_name">
+            </div>
+
+            <div class="mb-3">
+                <label for="phone_number" class="form-label">Phone Number</label>
+                <input type="number" class="form-control" id="phone_number">
+            </div>
+
+            <div class="mb-3">
+                <label for="email_id" class="form-label">Email Id</label>
+                <input type="email" class="form-control" id="email_id">
+            </div>
+
+            <div class="mb-3">
+                <label for="address" class="form-label">Address</label>
+                <input type="text" class="form-control" id="address">
+            </div>
+
+            <button type="submit " class="btn btn-primary">Register</button>
+        </form>
     </div>
 </div>
